--- a/resistor.html
+++ b/resistor.html
@@ -1,5 +1,11 @@
 <html>
     <head>
+        <script>
+            function setLineColor(e,p) {
+                alert(e.target.value);
+                document.getElementById("line"+p).style.stroke = 'yellow'
+            }
+        </script>
 
     </head>
     <body>
@@ -7,15 +13,15 @@
             <rect x="30" y="0" rx="5" ry="5" width="150" height="60"   style="fill:yellow;stroke:black;stroke-width:5;opacity:0.5" />
             <polyline points="180 28, 210 28, 210 63"   style="fill:none;stroke:black;stroke-width:4" />
             <polyline points="2 63, 2 28, 30 28"   style="fill:none;stroke:black;stroke-width:4" />
-            <line id="line1" x1="70" y1="2" x2="70" y2="59" style="stroke:red;stroke-width:2" />
-            <line id="line2" x1="90" y1="2" x2="90" y2="59" style="stroke:brown;stroke-width:2" />
-            <line id="line3" x1="110" y1="2" x2="110" y2="59" style="stroke:black;stroke-width:2" />
-            <line id="line4" x1="160" y1="2" x2="160" y2="59" style="stroke:silver;stroke-width:2" />
+            <line id="line1" x1="70" y1="2" x2="70" y2="58" style="stroke:red;stroke-width:2" />
+            <line id="line2" x1="90" y1="2" x2="90" y2="58" style="stroke:brown;stroke-width:2" />
+            <line id="line3" x1="110" y1="2" x2="110" y2="58" style="stroke:black;stroke-width:2" />
+            <line id="line4" x1="160" y1="2" x2="160" y2="58" style="stroke:silver;stroke-width:2" />
             Sorry, your browser does not support inline SVG.
         </svg>
         <p></p>
         <div>
-            <select name="colors" id="line1color" onchange="setLineColor(1)">
+            <select name="colors" id="line1color" onchange="setLineColor(event,1)">
                 <option value="0">black</option>
                 <option value="1">brown</option>
                 <option value="2">red</option>
@@ -27,7 +33,7 @@
                 <option value="8">grey</option>
                 <option value="9">white</option>
             </select>
-            <select name="colors" id="line2color" onchange="setLineColor(2)">
+            <select name="colors" id="line2color" onchange="setLineColor(event,2)">
                 <option value="0">black</option>
                 <option value="1">brown</option>
                 <option value="2">red</option>
@@ -39,7 +45,7 @@
                 <option value="8">grey</option>
                 <option value="9">white</option>
             </select>
-            <select name="colors" id="line3color" onchange="setLineColor(3)">
+            <select name="colors" id="line3color" onchange="setLineColor(event,3)">
                 <option value="0">black</option>
                 <option value="1">brown</option>
                 <option value="2">red</option>
