--- a/resistor.html
+++ b/resistor.html
@@ -3,7 +3,7 @@
         <script>
             function setLineColor(e,p) {
                 alert(e.target.value);
-                document.getElementById("line"+p).style.stroke = 'yellow'
+                document.getElementById("line"+p).style.stroke = 'red'
             }
         </script>
 
